k8s/network-policies/core-secondary-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: core-secondary-network-policy
spec:
  podSelector:
    matchLabels:
      app: core-secondary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: core

        - podSelector:
            matchLabels:
              app: prodbox
      ports:
        - protocol: TCP
          port: 3001
