k8s/network-policies/oauth-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oauth-network-policy
spec:
  podSelector:
    matchLabels:
      app: oauth
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front
        - podSelector:
            matchLabels:
              app: front-edge
        - podSelector:
            matchLabels:
              app: connectors
        - podSelector:
            matchLabels:
              app: connectors-worker
        - podSelector:
            matchLabels:
              app: front-worker

      ports:
        - protocol: TCP
          port: 3006
