k8s/network-policies/viz-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: viz-network-policy
spec:
  podSelector:
    matchLabels:
      app: viz
  policyTypes:
    - Egress
  egress: []
